cluster/homelab/apps/n8n/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: n8n
    namespace: n8n
    annotations:
        kubernetes.io/ingress.class: "nginx"
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: Low-code automation
        gethomepage.dev/group: Automation
        gethomepage.dev/icon: n8n
        gethomepage.dev/name: N8N
